{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 23,
  "lineage": "63b60056-5a89-cfb9-ecd5-62744b4fbc4f",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_address",
      "name": "vm_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-19T08:36:02.159-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bell-lab/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
            "priority": 1000,
            "project": "bell-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-19T08:36:02.028-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bell-lab/global/firewalls/web-app-firewall",
            "log_config": [],
            "name": "web-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
            "priority": 1000,
            "project": "bell-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/firewalls/web-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/bell-lab/global/networks/myvpc",
            "mtu": 1460,
            "name": "myvpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "bell-lab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-19T08:36:02.686-07:00",
            "gateway_address": "10.1.20.1",
            "id": "projects/bell-lab/regions/europe-west4/subnetworks/mysubnet",
            "ip_cidr_range": "10.1.20.0/24",
            "name": "mysubnet",
            "network": "https://www.googleapis.com/compute/v1/projects/bell-lab/global/networks/myvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bell-lab",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bell-lab/regions/europe-west4/subnetworks/mysubnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}